deploy playlists and other music utils to prod

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "semver": "^7.3.5",
         "shlex": "^2.1.0",
         "yt-search": "^2.10.3",
-        "ytdl-core": "^4.10.0"
+        "ytdl-core": "^4.10.0",
+        "ytpl": "^2.2.3"
     }
 }
