add discordjs opus

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "start": "node src/main.js"
     },
     "dependencies": {
+        "@discordjs/opus": "^0.5.3",
         "@discordjs/rest": "^0.2.0-canary.0",
         "@discordjs/voice": "^0.8.0",
         "child_process": "^1.0.2",
