remove dev from settings editors

--- a/config.json
+++ b/config.json
@@ -198,8 +198,7 @@
         ],
         "settings": [
             "owner",
-            "admin",
-            "dev"
+            "admin"
         ],
         "sticky": [
             "owner",
