--- a/config.json
+++ b/config.json
@@ -253,7 +253,7 @@
             "leader"
         ],
         "database": [
-            "dev"
+            "owner"
         ]
     },
     "support_anchor": "903686165792706580",
