starboard system pog

--- a/config.json
+++ b/config.json
@@ -3,6 +3,8 @@
     "guild": "805458032908959804",
     "mute": "805458032908959805",
     "verify": "805458032929538061",
+    "prefix": "s#",
+    "star_threshold": 1,
     "ranks": {
         "shenhe": {
             "level": 1000000,
@@ -281,15 +283,25 @@
         "modmail_category": "913215273996259380",
         "modmail_logs": "911071731265986560",
         "watchlist": "899332321583464478",
+        "private_starboard": "937177440311189544",
+        "public_starboard": "805603604408827934",
         "welcome": "890252868135825408"
     },
+    "private_categories": [
+        "913215273996259380",
+        "805458032946839579",
+        "913441743498805250",
+        "923383216591749120",
+        "916892018276446238",
+        "892765643387068446",
+        "926955286198116352"
+    ],
     "webhooks": {
         "message_logs": "936007414547873822"
     },
     "log_ignore": [
         "841866382840561705"
     ],
-    "prefix": "#",
     "db_options": {
         "user": "shenhe",
         "host": "localhost",
