--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "guild": "805458032908959804",
     "mute": "805458032908959805",
     "verify": "805458032929538061",
-    "prefix": "#",
+    "prefix": "s#",
     "star_threshold": 5,
     "ranks": {
         "shenhe": {
@@ -278,7 +278,7 @@
         "boosts": "808065247260704839",
         "logs": "922888612054454302",
         "member_count": "927057269064085504",
-        "message_logs": "922671895495733278",
+        "message_logs": "921110101144780860",
         "mod": "841857695265980466",
         "modmail_category": "913215273996259380",
         "modmail_logs": "911071731265986560",
@@ -297,7 +297,7 @@
         "926955286198116352"
     ],
     "webhooks": {
-        "message_logs": "936007414547873822"
+        "message_logs": "937223969998798879"
     },
     "log_ignore": [
         "841866382840561705"
