--- a/src/modules/help/helptext.yml
+++ b/src/modules/help/helptext.yml
@@ -173,7 +173,7 @@ text:
 
 
             Commands in this module: `slowmode`, `verbal`, `warn`, `mute`, `kick`, `ban`, `unmute`, `unban`, `massban`, `massban-from-url`, `remove`,
-            `clear-history`, `history`, `nick`
+            `clear-history`, `history`, `nick`, `purge`
     slowmode:
         title: Slowmode
         body: >
@@ -288,6 +288,14 @@ text:
             Set a user's nickname. If the user is not specified, defaults to yourself. If the nickname is not provided, it will reset the user's nickname. You are always
             allowed to use this command on yourself. If using this on another user, you must be a moderator or above and outrank them. If using this on the bot, you must
             have permission to modify bot settings.
+    purge:
+        title: Purge Messages
+        body: >
+            `{prefix}purge <N>`
+
+
+            Purge `N` messages. This command will prompt for confirmation.
+        footer: Requires Admin
     modmail:
         title: Modmail / Ticket System
         body: >
