sticky roles and unmuting non-members

--- a/config.json
+++ b/config.json
@@ -278,6 +278,7 @@
         },
         "927319922676219924": {}
     },
+    "autorole_exclude": "838116854866116608",
     "channels": {
         "admin": "912781727087341618",
         "application_category": "926955286198116352",
