--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
     "mute": "805458032908959805",
     "verify": "805458032929538061",
     "prefix": "#",
-    "star_threshold": 5,
+    "private_star_threshold": 3,
+    "public_star_threshold": 5,
     "ranks": {
         "shenhe": {
             "level": 1000000,
