--- a/config.json
+++ b/config.json
@@ -374,7 +374,7 @@
                 "805458032938188838",
                 "905624291326959660"
             ],
-            "open": true
+            "open": false
         },
         "tcmod": {
             "roles": [
